style(readme):typo
