# handlers/login_handler.go
@@ -8,53 +8,53 @@ import (
 	"github.com/simpleton/rest-api-sample/conf"
 	"github.com/simpleton/rest-api-sample/models"
 	"github.com/simpleton/rest-api-sample/db"
-***REMOVED***
+)
 
 type LoginHandler struct {
 }
 
-func(this *LoginHandler***REMOVED*** EmailLogin(c echo.Context***REMOVED*** error {
-	emailLogin := new(models.EmailLogin***REMOVED***
-	response := models.NewJsend(***REMOVED***
-	if err := c.Bind(emailLogin***REMOVED***; err != nil {
-		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
+func(this *LoginHandler) EmailLogin(c echo.Context) error {
+	emailLogin := new(models.EmailLogin)
+	response := models.NewJsend()
+	if err := c.Bind(emailLogin); err != nil {
+		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
 	}
-	userInfo, err := db.LoginWithEmail(*emailLogin.Email, emailLogin.Password***REMOVED***
+	userInfo, err := db.LoginWithEmail(*emailLogin.Email, emailLogin.Password)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
+		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
 	}
 	if userInfo != nil {
 		// Create token
-		jwtToken := jwt.New(jwt.SigningMethodHS256***REMOVED***
+		jwtToken := jwt.New(jwt.SigningMethodHS256)
 
 		// Set claims
-		claims := jwtToken.Claims.(jwt.MapClaims***REMOVED***
+		claims := jwtToken.Claims.(jwt.MapClaims)
 		claims["name"] = userInfo.Email
-		claims["exp"] = time.Now(***REMOVED***.Add(time.Hour * 24 * 7***REMOVED***.Unix(***REMOVED***
+		claims["exp"] = time.Now().Add(time.Hour * 24 * 7).Unix()
 
 		// Generate encoded token and send it as response.
-		t, err := jwtToken.SignedString([]byte(conf.JwtSecret***REMOVED******REMOVED***
+		t, err := jwtToken.SignedString([]byte(conf.JwtSecret))
 		if err != nil {
 			return err
 		}
 		token := map[string]string{"token": t}
-		return c.JSON(http.StatusOK, response.StatusCode(http.StatusOK***REMOVED***.Data(token***REMOVED******REMOVED***
+		return c.JSON(http.StatusOK, response.StatusCode(http.StatusOK).Data(token))
 	}
 	return echo.ErrUnauthorized
 }
 
-func(this *LoginHandler***REMOVED*** MobileLogin(c echo.Context***REMOVED*** error {
-	//user := new(models.User***REMOVED***
-	//if err := c.Bind(user***REMOVED***; err != nil {
+func(this *LoginHandler) MobileLogin(c echo.Context) error {
+	//user := new(models.User)
+	//if err := c.Bind(user); err != nil {
 	//	return err
 	//}
-	return c.JSON(http.StatusCreated, ""***REMOVED***
+	return c.JSON(http.StatusCreated, "")
 }
 
-func(this *LoginHandler***REMOVED*** ResetPassword(c echo.Context***REMOVED*** error {
-	//user := new(models.User***REMOVED***
-	//if err := c.Bind(user***REMOVED***; err != nil {
+func(this *LoginHandler) ResetPassword(c echo.Context) error {
+	//user := new(models.User)
+	//if err := c.Bind(user); err != nil {
 	//	return err
 	//}
-	return c.JSON(http.StatusCreated, ""***REMOVED***
+	return c.JSON(http.StatusCreated, "")
 }
