# handlers/register_handler.go
@@ -6,30 +6,30 @@ import (
 	"github.com/simpleton/rest-api-sample/models"
 	"github.com/simpleton/rest-api-sample/db"
 	"github.com/twinj/uuid"
-***REMOVED***
+)
 
 type RegisterHandler struct {
 
 }
 
-func(this *RegisterHandler***REMOVED*** Register(c echo.Context***REMOVED*** error {
-	register := new(models.RegisterInfo***REMOVED***
-	response := models.NewJsend(***REMOVED***
-	if err := c.Bind(register***REMOVED***; err != nil {
-		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
+func(this *RegisterHandler) Register(c echo.Context) error {
+	register := new(models.RegisterInfo)
+	response := models.NewJsend()
+	if err := c.Bind(register); err != nil {
+		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
 	}
 	// check user existed
-	if existed, err := db.CheckEmailExisted(register.Email***REMOVED***; err != nil {
-		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
-	} ***REMOVED*** {
+	if existed, err := db.CheckEmailExisted(register.Email); err != nil {
+		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
+	} else {
 		if existed {
-			return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
+			return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
 		}
 	}
-	salt := uuid.NewV4(***REMOVED***
-	err := db.CreateUser(register.Username, register.Password, register.Email, salt.String(***REMOVED******REMOVED***
+	salt := uuid.NewV4()
+	err := db.CreateUser(register.Username, register.Password, register.Email, salt.String())
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest***REMOVED***.Message(err.Error(***REMOVED******REMOVED******REMOVED***
+		return c.JSON(http.StatusBadRequest, response.StatusCode(http.StatusBadRequest).Message(err.Error()))
 	}
-	return c.JSON(http.StatusCreated, register***REMOVED***
+	return c.JSON(http.StatusCreated, register)
 }
