# models/email_login.go
@@ -1,14 +1,14 @@
 package models
 
-// This ***REMOVED***le was generated by the swagger tool.
-// Editing this ***REMOVED***le might prove futile when you re-run the swagger generate command
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
 
 import (
 	strfmt "github.com/go-swagger/go-swagger/strfmt"
 
 	"github.com/go-swagger/go-swagger/errors"
 	"github.com/go-swagger/go-swagger/httpkit/validate"
-***REMOVED***
+)
 
 /*EmailLogin email login
 
@@ -34,37 +34,37 @@ type EmailLogin struct {
 }
 
 // Validate validates this email login
-func (m *EmailLogin***REMOVED*** Validate(formats strfmt.Registry***REMOVED*** error {
+func (m *EmailLogin) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validatePassword(formats***REMOVED***; err != nil {
+	if err := m.validatePassword(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if err := m.validateRkey(formats***REMOVED***; err != nil {
+	if err := m.validateRkey(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if len(res***REMOVED*** > 0 {
-		return errors.CompositeValidationError(res...***REMOVED***
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (m *EmailLogin***REMOVED*** validatePassword(formats strfmt.Registry***REMOVED*** error {
+func (m *EmailLogin) validatePassword(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("password", "body", string(m.Password***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("password", "body", string(m.Password)); err != nil {
 		return err
 	}
 
 	return nil
 }
 
-func (m *EmailLogin***REMOVED*** validateRkey(formats strfmt.Registry***REMOVED*** error {
+func (m *EmailLogin) validateRkey(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("rkey", "body", string(m.Rkey***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("rkey", "body", string(m.Rkey)); err != nil {
 		return err
 	}
 
