# models/register_info.go
@@ -1,14 +1,14 @@
 package models
 
-// This ***REMOVED***le was generated by the swagger tool.
-// Editing this ***REMOVED***le might prove futile when you re-run the swagger generate command
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
 
 import (
 	strfmt "github.com/go-swagger/go-swagger/strfmt"
 
 	"github.com/go-swagger/go-swagger/errors"
 	"github.com/go-swagger/go-swagger/httpkit/validate"
-***REMOVED***
+)
 
 /*RegisterInfo register info
 
@@ -37,55 +37,55 @@ type RegisterInfo struct {
 }
 
 // Validate validates this register info
-func (m *RegisterInfo***REMOVED*** Validate(formats strfmt.Registry***REMOVED*** error {
+func (m *RegisterInfo) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validateEmail(formats***REMOVED***; err != nil {
+	if err := m.validateEmail(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if err := m.validatePassword(formats***REMOVED***; err != nil {
+	if err := m.validatePassword(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if err := m.validateUsername(formats***REMOVED***; err != nil {
+	if err := m.validateUsername(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if len(res***REMOVED*** > 0 {
-		return errors.CompositeValidationError(res...***REMOVED***
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (m *RegisterInfo***REMOVED*** validateEmail(formats strfmt.Registry***REMOVED*** error {
+func (m *RegisterInfo) validateEmail(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("email", "body", string(m.Email***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("email", "body", string(m.Email)); err != nil {
 		return err
 	}
 
 	return nil
 }
 
-func (m *RegisterInfo***REMOVED*** validatePassword(formats strfmt.Registry***REMOVED*** error {
+func (m *RegisterInfo) validatePassword(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("password", "body", string(m.Password***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("password", "body", string(m.Password)); err != nil {
 		return err
 	}
 
-	if err := validate.MinLength("password", "body", string(m.Password***REMOVED***, 6***REMOVED***; err != nil {
+	if err := validate.MinLength("password", "body", string(m.Password), 6); err != nil {
 		return err
 	}
 
 	return nil
 }
 
-func (m *RegisterInfo***REMOVED*** validateUsername(formats strfmt.Registry***REMOVED*** error {
+func (m *RegisterInfo) validateUsername(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("username", "body", string(m.Username***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("username", "body", string(m.Username)); err != nil {
 		return err
 	}
 
