# models/ret_status.go
@@ -1,14 +1,14 @@
 package models
 
-// This ***REMOVED***le was generated by the swagger tool.
-// Editing this ***REMOVED***le might prove futile when you re-run the swagger generate command
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
 
 import (
 	strfmt "github.com/go-swagger/go-swagger/strfmt"
 
 	"github.com/go-swagger/go-swagger/errors"
 	"github.com/go-swagger/go-swagger/httpkit/validate"
-***REMOVED***
+)
 
 /*RetStatus ret status
 
@@ -36,23 +36,23 @@ type RetStatus struct {
 }
 
 // Validate validates this ret status
-func (m *RetStatus***REMOVED*** Validate(formats strfmt.Registry***REMOVED*** error {
+func (m *RetStatus) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validateStatus(formats***REMOVED***; err != nil {
+	if err := m.validateStatus(formats); err != nil {
 		// prop
-		res = append(res, err***REMOVED***
+		res = append(res, err)
 	}
 
-	if len(res***REMOVED*** > 0 {
-		return errors.CompositeValidationError(res...***REMOVED***
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
 	}
 	return nil
 }
 
-func (m *RetStatus***REMOVED*** validateStatus(formats strfmt.Registry***REMOVED*** error {
+func (m *RetStatus) validateStatus(formats strfmt.Registry) error {
 
-	if err := validate.RequiredString("status", "body", string(m.Status***REMOVED******REMOVED***; err != nil {
+	if err := validate.RequiredString("status", "body", string(m.Status)); err != nil {
 		return err
 	}
 
