# swagger/swagger.json
@@ -18,20 +18,20 @@
       "post" : {
         "tags" : [ "Users" ],
         "description" : "login in with password",
-        "operationId" : "***REMOVED***nd",
+        "operationId" : "find",
         "parameters" : [ {
           "in" : "body",
           "name" : "body",
           "required" : false,
           "schema" : {
-            "$ref" : "#/de***REMOVED***nitions/emailLogin"
+            "$ref" : "#/definitions/emailLogin"
           }
         } ],
         "responses" : {
           "200" : {
             "description" : "Logined",
             "schema" : {
-              "$ref" : "#/de***REMOVED***nitions/retStatus"
+              "$ref" : "#/definitions/retStatus"
             }
           }
         }
@@ -47,27 +47,27 @@
           "name" : "body",
           "required" : false,
           "schema" : {
-            "$ref" : "#/de***REMOVED***nitions/registerInfo"
+            "$ref" : "#/definitions/registerInfo"
           }
         } ],
         "responses" : {
           "201" : {
             "description" : "Created",
             "schema" : {
-              "$ref" : "#/de***REMOVED***nitions/retStatus"
+              "$ref" : "#/definitions/retStatus"
             }
           },
           "default" : {
             "description" : "Error",
             "schema" : {
-              "$ref" : "#/de***REMOVED***nitions/retStatus"
+              "$ref" : "#/definitions/retStatus"
             }
           }
         }
       }
     }
   },
-  "de***REMOVED***nitions" : {
+  "definitions" : {
     "registerInfo" : {
       "type" : "object",
       "required" : [ "email", "password", "username" ],
@@ -124,7 +124,7 @@
     "user-id" : {
       "name" : "user-id",
       "in" : "path",
-      "description" : "The user identi***REMOVED***er number",
+      "description" : "The user identifier number",
       "required" : true,
       "type" : "number"
     },
